# yolov5_c

./: .gitignore  CMakeLists.txt  PROBLEM.md  PROJECT_STATUS.md  README.md  TESTING.md
data/inputs/: zidane_meta.txt
data/outputs/: bus_detections.txt
data/yolov5n/inputs/: bus_meta.txt
data/yolov5n/outputs/: bus_detections.txt
docs/: ACCURACY_VALIDATION.md  BACKBONE_LAYERS.md  DEBUGGING_PROCESS.md  DETECTION_FLOW.md  DETECT_HEAD.md  GOLDEN_TENSOR_STORAGE.md  HEAD_LAYERS.md  IMAGE_INFERENCE_WORKFLOW.md  INFERENCE_FLOW.md  LAYER_ARCHITECTURE.md  LAYER_STRUCTURE_COMPARISON.md  MODULE_ARCHITECTURE.md  PREPROCESSING.md  TESTING_PROCEDURE.md
src/: main.c
src/blocks/: bottleneck.c  bottleneck.h  c3.c  c3.h  sppf.c  sppf.h
src/core/: common.h  memory.c  memory.h  tensor.c  tensor.h  weights_loader.c  weights_loader.h
src/models/: yolov5n_build.c  yolov5n_build.h  yolov5n_graph.c  yolov5n_graph.h  yolov5n_infer.c  yolov5n_infer.h  yolov5n_infer_utils.h  yolov5s_build.c  yolov5s_build.h  yolov5s_graph.c  yolov5s_graph.h  yolov5s_infer.c  yolov5s_infer.h  yolov5s_infer_utils.h
src/ops/: activation.c  activation.h  batchnorm2d.c  batchnorm2d.h  concat.c  concat.h  conv2d.c  conv2d.h  pooling.c  pooling.h  upsample.c  upsample.h
src/postprocess/: detect.c  detect.h  nms.c  nms.h
testdata/python/: golden_meta.json
testdata_n/python/: golden_meta.json
tests/: CMakeLists.txt  run_tests.bat  run_tests.sh  test_conv1x1.c  test_integration.c
tools/: check_neck_features.py  compare_c3_steps.py  compare_detections.py  compare_sppf_steps.py  compare_tensors.py  debug_cv2_channel25.py  debug_layer2.py  debug_layer9.py  dump_golden.py  export_yolov5s.py  preprocess.py  test_nms.py  validate.py  verify_neck_features.py
weights/: model_meta.json  weights_map.json
weights/yolov5n/: model_meta_yolov5n.json  weights_map_yolov5n.json
weights/yolov5s/: model_meta_yolov5s.json  weights_map_yolov5s.json
